# Coordinatrice

./: CMakeLists.txt  README.md  main.c
include/: file.h  indirizzo.h  input.h
include/database/: aggiornamento.h  database.h  eliminazione.h  lettura.h  scrittura.h
include/grafica/: comandi.h  grafica.h  stampa.h
resources/: resource.rc
src/: file.c  indirizzo.c  input.c
src/database/: aggiornamento.c  database.c  eliminazione.c  lettura.c  scrittura.c
src/grafica/: comandi.c  grafica.c  stampa.c
